# libact

./: README.md  pyproject.toml
.github/workflows/: build-wheels.yml  tests.yml
libact/: __init__.py
libact/query_strategies/: __init__.py
